--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "hono": "^4.6.17",
+    "radash": "^12.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
