--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,12 +12,15 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
+    "clsx": "^2.1.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.2",
