--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,8 +18,10 @@
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
     "@tanstack/react-form": "^0.41.3",
+    "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
     "isbot": "^4.1.0",
     "lucide-react": "^0.473.0",
     "react": "^18.2.0",
