--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.473.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "vaul": "^1.1.2"
   },
