--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.2.0",
     "isbot": "^4.1.0",
     "jotai": "^2.11.1",
     "lucide-react": "^0.473.0",
