--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.2.1",
     "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
+    "firebase-admin": "^13.0.2",
     "hono": "^4.6.17",
     "radash": "^12.1.0",
     "zod": "^3.24.1"
