--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "firebase-admin": "^13.0.2",
     "hono": "^4.6.17",
+    "nanoid": "^5.0.9",
     "radash": "^12.1.0",
     "zod": "^3.24.1"
   },
