--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -26,6 +26,7 @@
     "isbot": "^4.1.0",
     "jotai": "^2.11.1",
     "lucide-react": "^0.473.0",
+    "radash": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sonner": "^1.7.2",
