--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,11 +12,15 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@tanstack/react-form": "^0.41.3",
     "@tanstack/react-query": "^5.64.2",
     "class-variance-authority": "^0.7.1",
