--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,6 +14,7 @@
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-select": "^2.1.6",
 		"@react-router/node": "^7.1.5",
 		"@react-router/serve": "^7.1.5",
 		"@stripe/react-stripe-js": "^3.1.1",
@@ -30,6 +31,7 @@
 		"radash": "^12.1.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-international-phone": "^4.5.0",
 		"react-router": "^7.1.5",
 		"sonner": "^1.7.2",
 		"tailwind-merge": "^2.6.0",
